--- a/app/index.html
+++ b/app/index.html
@@ -34,20 +34,20 @@
 <h3 id="banner"></h3>
 <h3 id="bannerUser"></h3>
 <h1>VM list<br/></h1>
-<ul>
-    <li>All</li>
-    <li>My</li>
-    <li>Paid</li>
-    <li>Can accept</li>
+<ul class="navbar">
+    <li id="listall" class="navbtn">All</li>
+    <li id="listnotack" class="navbtn">My VMs (not accept)</li>
+    <li id="listack" class="navbtn">My VMs (accepted)</li>
+    <li id="listcanack" class="navbtn">Can accept</li>
 </ul>
 <div id="vmlist">
     <div id="demo">
-        <ul>
-            <li>Name:</li>
-            <li>Core:</li>
-            <li>Mem:</li>
-            <li>Vpower</li>
-            <li>Vmem</li>
+        <ul class="items">
+            <li class="properity">Name:</li>
+            <li class="properity">Core:</li>
+            <li class="properity">Mem:</li>
+            <li class="properity">Vpower</li>
+            <li class="properity">Vmem</li>
         </ul>
         <button type="button" class="btn" > Accept</button>
         <button type="button" class="btn" > Link</button>
